--- a/style.css
+++ b/style.css
@@ -1,18 +1,89 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #888484;
+body {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #9b5295;
 }
 
-.calculator{
-    height: 500px;
-    width: 350px;
-    border: 2px solid;
+.calculator {
+  box-shadow: 1px 3px 10px 2px #ef93fc;
+  padding: 5px;
+  height: 475px;
+  width: 344px;
+  border: 2px solid white;
+  border-radius: 20px;
 }
+.display {
+  font-size: 17px;
+  font-weight: 200;
+  padding: 20px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: end;
+  color: white;
+  text-align: right;
+  height: 20%;
+  background: rgba(183, 84, 174, 0.6);
+  box-shadow: inset 0px 0px 20px 0px black;
+  border-radius: 20px;
+}
+form {
+  margin-top: 20px;
+  display: grid;
+  grid-template-rows: 2fr 2fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+form input {
+  font-size: 15px;
+  box-shadow: 2px 2px 7px 0px black;
+  border-radius: 10px;
+  border: none;
+  margin: 10px;
+  height: 40px;
+}
+.button:active{
+    background: rgba(247, 117, 236, 0.6);
+    color: white;
+    transition: 0.02s ease-in-out;
+}
+button:focus {
+    border: none;
+    outline: 0 !important;
+    outline-style: none;
+}
+
+.zero {
+  grid-column: 2/3;
+}
+.equal {
+  grid-column: 3/5;
+  background: rgba(247, 117, 236, 0.6);
+  border-radius: 10px;
+  border: 2px solid white;
+  color: white;
+}
+.AC{
+  background: rgba(247, 117, 236, 0.6);
+  border-radius: 10px;
+  border: 2px solid white;
+  color: white;
+}
+
+
+.poppins-bold {
+    font-size: 35px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+.poppins-medium {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
